# controllers/produtos.js
@@ -2,6 +2,12 @@ const roteador = require('express').Router()
 const TabelaProduto = require('../repository/TabelaProduto')
 const Produto = require('../model/Produto')
 const { default: axios } = require('axios')
+var jwt = require("jwt-simple")
+var auth = require("../auth")()
+var users = require("../users")
+var cfg = require("../config")
+
+roteador.use(auth.initialize())
 
 roteador.get('/produtos/', async (requisicao, resposta) => {
     const resultados = await TabelaProduto.listar()
@@ -14,9 +20,9 @@ roteador.get('/produtos/', async (requisicao, resposta) => {
 })
 
 roteador.get('/produtos/:idProduto', async (requisicao, resposta) => {
-    try{
+    try {
         const id = requisicao.params.idProduto
-        const produto = new Produto({id : id})
+        const produto = new Produto({ id: id })
         await produto.carregar()
         resposta.status(200)
         resposta.send(
@@ -32,15 +38,12 @@ roteador.get('/produtos/:idProduto', async (requisicao, resposta) => {
     }
 })
 
-roteador.post('/produtos/', async (requisicao, resposta) => {
+roteador.post('/produtos/', auth.authenticate(), async (requisicao, resposta) => {
     try {
-    const dadosRecebidos = requisicao.body
-    const produto = new Produto(dadosRecebidos)
-    await produto.criar()
-    resposta.status(201)
-    resposta.send(
-        JSON.stringify(produto)
-    )
+        const dadosRecebidos = requisicao.body
+        const produto = new Produto(dadosRecebidos)
+        await produto.criar()
+        resposta.status(201).json(produto)
     } catch (erro) {
         resposta.status(400)
         resposta.send(
@@ -51,16 +54,16 @@ roteador.post('/produtos/', async (requisicao, resposta) => {
     }
 })
 
-roteador.put('/produtos/:idProduto', async (requisicao, resposta) => {
-    try{
+roteador.put('/produtos/:idProduto', auth.authenticate(), async (requisicao, resposta) => {
+    try {
         const id = requisicao.params.idProduto
         const dadosRecebidos = requisicao.body
-        const dados = Object.assign({}, dadosRecebidos, {id: id})
+        const dados = Object.assign({}, dadosRecebidos, { id: id })
         const produto = new Produto(dados)
         await produto.atualizar()
         resposta.status(204)
         resposta.end()
-    } catch(erro){
+    } catch (erro) {
         resposta.status(400)
         resposta.send(
             JSON.stringify({
@@ -70,14 +73,14 @@ roteador.put('/produtos/:idProduto', async (requisicao, resposta) => {
     }
 })
 
-roteador.delete('/produtos/:idProduto', async (requisicao, resposta) => {
+roteador.delete('/produtos/:idProduto', auth.authenticate(), async (requisicao, resposta) => {
     try {
-    const id = requisicao.params.idProduto
-    const produto = new Produto({id : id})
-    await produto.carregar()
-    await produto.remover()
-    resposta.status(204)
-    resposta.end()
+        const id = requisicao.params.idProduto
+        const produto = new Produto({ id: id })
+        await produto.carregar()
+        await produto.remover()
+        resposta.status(204)
+        resposta.end()
     } catch (erro) {
         resposta.status(404)
         resposta.send(
@@ -85,6 +88,26 @@ roteador.delete('/produtos/:idProduto', async (requisicao, resposta) => {
                 mensagem: erro.message
             })
         )
+    }
+})
+
+roteador.post("/token", function (req, res) {
+    if (req.body.email && req.body.password) {
+        var email = req.body.email
+        var password = req.body.password
+        var user = users.find(function (u) {
+            return u.email === email && u.password === password
+        })
+        if (user) {
+            var payload = { id: user.id }
+            var token = jwt.encode(payload, cfg.jwtSecret)
+            res.json({ token: token })
+            return
+        } else {
+            res.Status(401)
+        }
+    } else {
+        res.Status(401)
     }
 })
 
